# env-monitor

./: .gitignore  README.md
backend/: app.py  database.py  mqtt_subscriber.py  requirements.txt  test_db.py
firmware/: CMakeLists.txt  read_dht22.py
firmware/src/: main.cpp  mqtt_publisher.cpp  mqtt_publisher.h
firmware/src/sensors/: dht22.cpp  dht22.h  hcsr04.cpp  hcsr04.h
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  config.js
frontend/src/components/: CurrentReadings.js  SensorChart.js  StatsPage.js
systemd/: sensor-backend.service  sensor-daemon.service
